Fixed changing favorite projects order and scrolling side menu on mobile devices

--- a/src/WebUI/ClientApp/src/app/components/favorite-project-items/favorite-projects-list/favorite-projects-list.component.scss
+++ b/src/WebUI/ClientApp/src/app/components/favorite-project-items/favorite-projects-list/favorite-projects-list.component.scss
@@ -1,8 +1,15 @@
+@import '../../../../scss/shared.scss';
+
 .favorite-projects {
   margin-left: auto;
   margin-right: auto;
   display: flex;
   flex-direction: column;
+  width: 60%;
+
+  @include respond-to(medium) {
+    width: 100%;
+  }
 }
 
 table {
