--- a/src/WebUI/ClientApp/src/app/components/side-menu/side-menu.component.scss
+++ b/src/WebUI/ClientApp/src/app/components/side-menu/side-menu.component.scss
@@ -31,8 +31,8 @@
   position: fixed;
   left: 0;
   top: 0;
-  width: 80vw;
-  height: 100vh;
+  width: 87vw;
+  height: 100%;
   background-color: #36393F;
   z-index: 100;
 
